# sprite-creation

./: .gitignore  .gitmodules  README.md
integrations/msg-to-pdf-dropzone/: .gitignore  AGENTS.md  MASTER_AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
integrations/msg-to-pdf-dropzone/art/exports/: README.md
integrations/msg-to-pdf-dropzone/art/source/: README.md  prompt-log.md  style-bible.md
integrations/msg-to-pdf-dropzone/src/msg_to_pdf_dropzone/: app.py  app_state.py  converter.py  corpus_profiler.py  drop_helpers.py  models.py  msg_parser.py  outlook_mhtml_worker.py  outlook_selection.py  pdf_writer.py  task_events.py  theater_host.py  thread_logic.py
integrations/msg-to-pdf-dropzone/src/msg_to_pdf_dropzone/theater_assets/: index.html
integrations/msg-to-pdf-dropzone/src/msg_to_pdf_dropzone/theater_assets/assets/: BitmapFont-BZu-sGWn.js  BufferResource-D72j0Uuw.js  Filter-DjVj8ONF.js  (+8 more)
integrations/msg-to-pdf-dropzone/tests/: test_app_drop_responsiveness.py  test_app_state.py  test_converter.py  test_corpus_profiler.py  test_drop_helpers.py  test_msg_parser.py  test_outlook_selection.py  test_pdf_writer.py  test_task_events.py  test_theater_host.py  test_thread_logic.py
integrations/msg-to-pdf-dropzone/theater_runtime/: package-lock.json  package.json  tsconfig.json  vite.config.ts
integrations/msg-to-pdf-dropzone/theater_runtime/public/art/: manifest.json
integrations/msg-to-pdf-dropzone/theater_runtime/src/: event-source.ts  main.ts  scene-scheduler.test.ts  scene-scheduler.ts  styles.css  task-store.ts  types.ts  workshop-scene.ts
(+35 files in other folders)
